[gd_scene load_steps=12 format=3 uid="uid://bxcdn2v1ffjm4"]

[ext_resource type="Texture2D" uid="uid://blh68p6fsiaph" path="res://Arts/UI/Spritesheet/UI_TravelBook_SpritesheetInfo01a.png" id="1_jxero"]
[ext_resource type="Script" uid="uid://dbe16agb5kjb0" path="res://Scripts/ui.gd" id="1_qdvrb"]
[ext_resource type="Texture2D" uid="uid://bct5coqvxs7bs" path="res://Arts/UI/Pain Hud.png" id="3_nf4gj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qdvrb"]
atlas = ExtResource("1_jxero")
region = Rect2(65, 289, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7pk6"]
atlas = ExtResource("1_jxero")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf4gj"]
atlas = ExtResource("1_jxero")
region = Rect2(65, 289, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2246s"]
atlas = ExtResource("1_jxero")
region = Rect2(65, 289, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_m78vo"]
atlas = ExtResource("1_jxero")
region = Rect2(64, 560, 64, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_smcll"]
texture = SubResource("AtlasTexture_m78vo")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ryf15"]
atlas = ExtResource("1_jxero")
region = Rect2(64, 576, 32, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mmixe"]
texture = SubResource("AtlasTexture_ryf15")
modulate_color = Color(0.767025, 2.52686e-06, 9.62615e-07, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_qdvrb")

[node name="Ammo" type="Label" parent="."]
unique_name_in_owner = true
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 43.0
offset_top = 29.0
offset_right = 87.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
text = "30/120"

[node name="Reloading" type="Label" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 43.0
offset_top = 48.0
offset_right = 87.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
text = "Reloading..."

[node name="Slots" type="HBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -243.0
offset_top = -88.0
offset_right = -25.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0

[node name="WeaponSlot" type="TextureRect" parent="Slots"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_qdvrb")
expand_mode = 1
stretch_mode = 5

[node name="Selected" type="TextureRect" parent="Slots/WeaponSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_q7pk6")
expand_mode = 1
stretch_mode = 5

[node name="WeaponTexture" type="TextureRect" parent="Slots/WeaponSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 9.0
offset_right = -10.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="KeyBind" type="Label" parent="Slots/WeaponSlot"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -21.0
offset_right = 51.0
offset_bottom = 2.0
grow_vertical = 0
text = "1"

[node name="WeaponSlot2" type="TextureRect" parent="Slots"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_nf4gj")
expand_mode = 1
stretch_mode = 5

[node name="Selected" type="TextureRect" parent="Slots/WeaponSlot2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_q7pk6")
expand_mode = 1
stretch_mode = 5

[node name="WeaponTexture" type="TextureRect" parent="Slots/WeaponSlot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 9.0
offset_right = -10.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="KeyBind" type="Label" parent="Slots/WeaponSlot2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -21.0
offset_right = 51.0
offset_bottom = 2.0
grow_vertical = 0
text = "2"

[node name="WeaponSlot3" type="TextureRect" parent="Slots"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_2246s")
expand_mode = 1
stretch_mode = 5

[node name="Selected" type="TextureRect" parent="Slots/WeaponSlot3"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_q7pk6")
expand_mode = 1
stretch_mode = 5

[node name="WeaponTexture" type="TextureRect" parent="Slots/WeaponSlot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 9.0
offset_right = -10.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="KeyBind" type="Label" parent="Slots/WeaponSlot3"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -21.0
offset_right = 51.0
offset_bottom = 2.0
grow_vertical = 0
text = "3"

[node name="LifeBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -61.0
offset_right = 33.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxTexture_smcll")
theme_override_styles/fill = SubResource("StyleBoxTexture_mmixe")
value = 66.13
show_percentage = false

[node name="HealthOverlay" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_nf4gj")
expand_mode = 1
